# monkey-interpreter

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.txt  lang.toml  main.cpp  todo.md
.arti/ws/: .cache.lua  config.lua  launch.lua  state.lua  tasks.lua  variables.lua
configured_files/: CMakeLists.txt  config.hpp.in
include/common/utils/: coroutines.hpp  overload_set.hpp  strings.hpp  to.hpp
include/interpreter/repl/: loop.hpp
include/monkey/ast/: ast.hpp  concepts.hpp  program.hpp
include/monkey/ast/types/: array_literal.hpp  ast_node.hpp  block_statement.hpp  boolean_literal.hpp  call_expression.hpp  const_statement.hpp  expression_statement.hpp  function_literal.hpp  hash_literal.hpp  identifier.hpp  if_expression.hpp  index_expression.hpp  infix_expression.hpp  integer_litera.hpp  integer_literal.hpp  let_statement.hpp  prefix_expression.hpp  return_statement.hpp  string_literal.hpp
include/monkey/evaluator/: evaluator.hpp  scope.hpp
include/monkey/evaluator/impl/: tree_walker.hpp
include/monkey/lexer/: lexer.hpp
include/monkey/object/: object.hpp
include/monkey/parser/: parser.hpp  precedence.hpp
include/monkey/token/: token.hpp  token_definitions.hpp
src/interpreter/repl/: loop.cpp
src/monkey/ast/: ast.cpp  program.cpp
src/monkey/ast/types/: array_literal.cpp  ast_node.cpp  block_statement.cpp  boolean_literal.cpp  call_expression.cpp  const_statement.cpp  expression_statement.cpp  function_literal.cpp  hash_literal.cpp  identifier.cpp  if_expression.cpp  index_expression.cpp  infix_expression.cpp  integer_literal.cpp  let_statement.cpp  prefix_expression.cpp  return_statement.cpp  string_literal.cpp
src/monkey/evaluator/: object.cpp  scope.cpp
src/monkey/evaluator/impl/: tree_walker.cpp
src/monkey/lexer/: lexer.cpp
src/monkey/parser/: parser.cpp
src/monkey/token/: token.cpp
tests/ast/: to_string.cpp
tests/include/: test_boolean_literal.hpp  test_expression.hpp  test_identifier.hpp  test_infix_expression.hpp  test_integer_literal.hpp  test_literal.hpp  test_literal_expression.hpp  test_prefix_expression.hpp
tests/lexer/: next_token.cpp  next_token.mnky
tests/parser/: expressions.cpp  infix_expression.mnky  let_statements.cpp  operator_precedence.cpp  operator_precedence.mnky  prefix_expression.mnky  return_statements.cpp  return_statements.mnky
(+39 files in other folders)
